--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap");
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 :root {
   --background: #16161a;
   --headline: #fffffe;
@@ -37,13 +39,13 @@
   --nav: #17181a;
 }
 
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 body {
   font-family: "Cairo", sans-serif;
+  overscroll-behavior: none;
+}
+
+html {
+  overscroll-behavior: none;
 }
 
 @layer components {
